Add outline button

--- a/src/docs/elements/buttons.mdx
+++ b/src/docs/elements/buttons.mdx
@@ -24,6 +24,20 @@ You can use two default color variants named: primary and secondary. To overwrit
 
 <Notification type="correct">Use <code>&lt;a&gt;</code> for links and navigation between pages and <code>&lt;button&gt;</code> for actions (in page) like a form sending or modal opening.</Notification>
 
+## Outlined
+
+<Preview>
+  <div class="button-grid">
+    <button type="button" class="btn btn--outline-primary">Primary</button>
+    <a href="https://conedevelopment.com" class="btn btn--outline-secondary">Secondary</a>
+  </div>
+</Preview>
+
+```html
+<button type="button" class="btn btn--outline-primary">Primary</button>
+<a href="https://conedevelopment.com" class="btn btn--outline-secondary">Secondary</a>
+```
+
 ## Sizes
 
 Spruce came with three different button sizes: small, regular, large. Using the standard size, you don't have to use any modifier. For small use: `btn--sm`, for large use: `btn--lg` class.
