--- a/src/docs/sass/variables.mdx
+++ b/src/docs/sass/variables.mdx
@@ -406,6 +406,8 @@ $btn-font-size-lg: 1.15rem;
 
 $btn-shadow-width: 0.25rem;
 
+$btn-outline-width: 1px;
+
 $btn-padding: 0.75em 1em;
 $btn-padding-sm: 0.5em;
 $btn-padding-lg: 0.9em 1.15em;
