Update to Spruce CSS v1.2.0

--- a/src/docs/sass/functions.mdx
+++ b/src/docs/sass/functions.mdx
@@ -182,7 +182,7 @@ Get a value by key name from the `$spacers` map.
 
 ## spacer-clamp
 
-Create a `clamp()` declaration with values from the $spacers map or from any generic value. The goal of this helper function is to create fluid spacers more easily.
+Create a `clamp()` declaration with values from the `$spacers` map or from any generic value. The goal of this helper function is to create fluid spacers more easily.
 
 ### Argument(s)
 
