MDX nested list style fix

--- a/src/docs/elements/typography.mdx
+++ b/src/docs/elements/typography.mdx
@@ -146,7 +146,8 @@ sub <sub>element</sub>
 <Preview>
 <ul>
   <li>Milk</li>
-  <li>Cheese
+  <li>
+    Cheese
     <ul>
       <li>Blue cheese</li>
       <li>Feta</li>
@@ -177,7 +178,8 @@ sub <sub>element</sub>
 <!-- Unordered list -->
 <ul>
   <li>Milk</li>
-  <li>Cheese
+  <li>
+    Cheese
     <ul>
       <li>Blue cheese</li>
       <li>Feta</li>
