Iframe aspect-ratio fix

--- a/src/docs/getting-started/internationalization.mdx
+++ b/src/docs/getting-started/internationalization.mdx
@@ -4,7 +4,7 @@ order: 6
 github: 'https://github.com/conedevelopment/sprucecss-site/blob/main/src/docs/getting-started/internationalization.mdx'
 ---
 
-<p class="lead">Internationalization (i18n) means preparing the code, design to handle different languages and writing modes.</p>
+<p className="lead">Internationalization (i18n) means preparing the code, design to handle different languages and writing modes.</p>
 
 Thanks for the logical properties and values; we can do more with i18n just with CSS.
 
@@ -12,7 +12,7 @@ The simplest example is the right-to-left (RTL) writing mode used by Arabic and 
 
 For more information, check out this excellent introductory video from [Moriel Schottlender](https://twitter.com/mooeypoo) hosted by [Jason Lengstorf](https://www.jason.af/):
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/OHF2h1_fBCM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="600" height="400" src="https://www.youtube.com/embed/OHF2h1_fBCM" title="Right-to Left (RTL) Support for Websites (with Moriel Schottlender) — Learn With Jason" frameBorder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowFullScreen></iframe>
 
 ## Logical Properties and Values
 
