--- a/src/docs/elements/buttons.mdx
+++ b/src/docs/elements/buttons.mdx
@@ -90,14 +90,8 @@ The `.btn` has `inline-flex` display with a `gap` value.
 
 <Preview>
   <div class="button-grid button-grid--stacked">
-    <button type="button" class="btn btn--primary">
-      <Icon type="arrow-right" className="btn__icon" />
-      Read more
-    </button>
-    <button type="button" class="btn btn--secondary">
-      Read more
-      <Icon type="arrow-right" className="btn__icon" />
-    </button>
+    <button type="button" class="btn btn--primary"><Icon type="arrow-right" className="btn__icon" /> Read more</button>
+    <button type="button" class="btn btn--secondary">Read more <Icon type="arrow-right" className="btn__icon" /></button>
   </div>
 </Preview>
 
@@ -116,14 +110,8 @@ You can also use the `.btn__icon--sm` modifier to make the icons smaller.
 
 <Preview>
   <div class="button-grid button-grid--stacked">
-    <button type="button" class="btn btn--primary">
-      <Icon type="arrow-right" className="btn__icon btn__icon--sm" />
-      Read more
-    </button>
-    <button type="button" class="btn btn--secondary">
-      Read more
-      <Icon type="arrow-right" className="btn__icon btn__icon--sm" />
-    </button>
+    <button type="button" class="btn btn--primary"><Icon type="arrow-right" className="btn__icon btn__icon--sm" /> Read more</button>
+    <button type="button" class="btn btn--secondary">Read more <Icon type="arrow-right" className="btn__icon btn__icon--sm" /></button>
   </div>
 </Preview>
 
