--- a/src/docs/elements/typography.mdx
+++ b/src/docs/elements/typography.mdx
@@ -144,17 +144,17 @@ sub <sub>element</sub>
 ## Lists
 
 <Preview>
+{
 <ul>
   <li>Milk</li>
-  <li>
-    Cheese
+  <li>Cheese
     <ul>
       <li>Blue cheese</li>
       <li>Feta</li>
     </ul>
   </li>
 </ul>
-
+}
 <ol>
   <li>Alpha</li>
   <li>Beta</li>
@@ -178,8 +178,7 @@ sub <sub>element</sub>
 <!-- Unordered list -->
 <ul>
   <li>Milk</li>
-  <li>
-    Cheese
+  <li> Cheese
     <ul>
       <li>Blue cheese</li>
       <li>Feta</li>
