--- a/src/docs/elements/media.mdx
+++ b/src/docs/elements/media.mdx
@@ -4,7 +4,7 @@ order: 21
 github: 'https://github.com/conedevelopment/sprucecss-site/blob/main/src/docs/elements/media.mdx'
 ---
 
-<p class="lead">Under media, you can find some of the media-related styles and utilities.</p>
+<p className="lead">Under media, you can find some of the media-related styles and utilities.</p>
 
 ## Images
 
@@ -51,22 +51,21 @@ For this purpose, we have some utility named:
 - `aspect-ratio-4-3`
 - `aspect-ratio-1-1`
 
-
 <Preview>
 <div class="aspect-ratio-16-9">
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/-6Xl9tBWt54" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen"></iframe>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/-6Xl9tBWt54" title="Lordi - Hard Rock Hallelujah" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen"></iframe>
 </div>
 </Preview>
 
 ```html
 <div class="aspect-ratio-16-9">
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/-6Xl9tBWt54" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen"></iframe>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/-6Xl9tBWt54" title="Lordi - Hard Rock Hallelujah" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen"></iframe>
 </div>
 ```
 
 <Preview>
 <div class="aspect-ratio-4-3">
-  <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d41126.9496578375!2d17.890734642764393!3d46.95617814407089!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1shu!2shu!4v1646924792947!5m2!1shu!2shu" width="600" height="450" style="border:0;" allowfullscreen="allowfullscreen" loading="lazy"></iframe>
+  <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d41126.9496578375!2d17.890734642764393!3d46.95617814407089!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1shu!2shu!4v1646924792947!5m2!1shu!2shu" width="600" height="450" style={{border: 0}} allowfullscreen="allowfullscreen"></iframe>
 </div>
 </Preview>
 
@@ -76,6 +75,4 @@ For this purpose, we have some utility named:
 </div>
 ```
 
-<Notification type="info">
-Please note that you must explicitly enable this using the <a href="/docs/customization/settings#utilities">utilities</a> switch under the <code>$settings</code> map.
-</Notification>
+<Notification type="info">Please note that you must explicitly enable this using the <a href="/docs/customization/settings#utilities">utilities</a> switch under the <code>$settings</code> map.</Notification>
