--- a/src/blog/how-to-reduce-spruce-css-size.mdx
+++ b/src/blog/how-to-reduce-spruce-css-size.mdx
@@ -1,9 +1,9 @@
 ---
 title: 'How to Reduce Spruce CSS Size'
-date: 2022-11-14
+date: 2023-01-04
 featuredImage: '../images/blog/how-to-03.png'
 alt: ''
-published: false
+published: true
 tags: ['how-to']
 ---
 
