--- a/src/docs/customization/themes.mdx
+++ b/src/docs/customization/themes.mdx
@@ -4,7 +4,7 @@ order: 12
 github: 'https://github.com/conedevelopment/sprucecss-site/blob/main/src/docs/customization/themes.mdx'
 ---
 
-<p class="lead">Spruce uses CSS custom properties to handle the theming. It means that you can easily overwrite the colors if needed (like in a case of a dark theme mode).</p>
+<p className="lead">Spruce uses CSS custom properties to handle the theming. It means that you can easily overwrite the colors if needed (like in a case of a dark theme mode).</p>
 
 ## Detect Dark Mode
 
