--- a/src/blog/about-modern-sass.mdx
+++ b/src/blog/about-modern-sass.mdx
@@ -7,7 +7,7 @@ published: true
 tags: ['sass']
 ---
 
-<p class="lead">Should we use Sass in 2022/2023? Is it still relevant and helpful? Good questions. It is still a proper tool, but it has changed over the years.</p>
+<p className="lead">Should we use Sass in 2022/2023? Is it still relevant and helpful? Good questions. It is still a proper tool, but it has changed over the years.</p>
 
 [Sass](https://sass-lang.com/) (Syntactically Awesome Style Sheets) was first released back in 2006. It is a mature project on a scale of web development. There are a lot of things that lose their importance in a fraction of this time.
 
