--- a/src/blog/how-to-choose-a-css-framework.mdx
+++ b/src/blog/how-to-choose-a-css-framework.mdx
@@ -7,7 +7,7 @@ published: true
 tags: ['css']
 ---
 
-<p class="lead">Choosing any framework is challenging because it is a tool that requires commitment; we rarely choose it for just one project. We take our time, learn it and adapt it.</p>
+<p className="lead">Choosing any framework is challenging because it is a tool that requires commitment; we rarely choose it for just one project. We take our time, learn it and adapt it.</p>
 
 Knowing why we use any CSS framework is an interesting topic because we started to develop our minimal variant, Spruce CSS.
 
