--- a/src/blog/how-to-configure-spruce-css-in-your-project.mdx
+++ b/src/blog/how-to-configure-spruce-css-in-your-project.mdx
@@ -7,7 +7,7 @@ published: true
 tags: ['how-to']
 ---
 
-<p class="lead">Including Spruce CSS in your project is an easy job. First, you must install it (the best with npm) and set up the <a href="https://sprucecss.com/blog/the-simplest-sass-compile-setup">Sass compile</a>. Second, you need a quick config setting and are good to go.</p>
+<p className="lead">Including Spruce CSS in your project is an easy job. First, you must install it (the best with npm) and set up the <a href="https://sprucecss.com/blog/the-simplest-sass-compile-setup">Sass compile</a>. Second, you need a quick config setting and are good to go.</p>
 
 A config setting is needed to set your custom values and generate Spruce’s styles.
 
