--- a/src/blog/how-to-reduce-spruce-css-size.mdx
+++ b/src/blog/how-to-reduce-spruce-css-size.mdx
@@ -7,7 +7,7 @@ published: true
 tags: ['how-to']
 ---
 
-<p class="lead">We try to make Spruce CSS smaller but still, we talk about 1000+ lines of code. Sometimes we don’t need all of them.</p>
+<p className="lead">We try to make Spruce CSS smaller but still, we talk about 1000+ lines of code. Sometimes we don’t need all of them.</p>
 
 This framework only writes out any code if we tell it explicitly through a mixin. We call these mixins generators. We can control the size of our codebase by using or omitting them.
 
