--- a/src/blog/how-to-setup-a-dark-theme-in-spruce-css.mdx
+++ b/src/blog/how-to-setup-a-dark-theme-in-spruce-css.mdx
@@ -7,7 +7,7 @@ published: true
 tags: ['how-to']
 ---
 
-<p class="lead">Creating a dark theme mode is a common trend today, which is understandable because it is a preferred style for many of us.</p>
+<p className="lead">Creating a dark theme mode is a common trend today, which is understandable because it is a preferred style for many of us.</p>
 
 Using Spruce CSS, you can make any theme, which means you overwrite the default, generated CSS color custom properties.
 
