--- a/src/blog/introduction-of-spruce-ui.mdx
+++ b/src/blog/introduction-of-spruce-ui.mdx
@@ -7,7 +7,7 @@ published: true
 tags: ['ui']
 ---
 
-<p class="lead">We just released the first version of <a href="/ui/getting-started/introduction">Spruce UI</a>, a collection set of reusable, copy-pastable HTML, CSS components (with some JS) built on Spruce CSS.</p>
+<p className="lead">We just released the first version of <a href="/ui/getting-started/introduction">Spruce UI</a>, a collection set of reusable, copy-pastable HTML, CSS components (with some JS) built on Spruce CSS.</p>
 
 This project aims to give you (and us) a collection of components to serve some quality components with our framework.
 
