--- a/src/blog/the-different-types-of-css-frameworks.mdx
+++ b/src/blog/the-different-types-of-css-frameworks.mdx
@@ -7,7 +7,7 @@ published: true
 tags: ['css']
 ---
 
-<p class="lead">Categorizing CSS frameworks are sometimes more straightforward, sometimes more complex. Usually, we can put them in a group based on their philosophies.</p>
+<p className="lead">Categorizing CSS frameworks are sometimes more straightforward, sometimes more complex. Usually, we can put them in a group based on their philosophies.</p>
 
 And why should you know the type of the library you are using? Well, you shouldn’t necessarily. Knowing the type of any framework can be helpful because you will know what to expect based on your needs. Other than this, it isn’t that relevant because what matters that how it can solve your problems (not technically how).
 
