--- a/src/blog/the-simplest-sass-compile-setup.mdx
+++ b/src/blog/the-simplest-sass-compile-setup.mdx
@@ -7,7 +7,7 @@ published: true
 tags: ['sass']
 ---
 
-<p class="lead">Sass is an excellent tool to make CSS more dynamic, but it is still a burden for many of us because of the compiling settings. Let's see how we can set up a minimal but well-functioning configuration.</p>
+<p className="lead">Sass is an excellent tool to make CSS more dynamic, but it is still a burden for many of us because of the compiling settings. Let's see how we can set up a minimal but well-functioning configuration.</p>
 
 I think the easiest way to compile Sass is through npm scripts. Using npm scripts, we can run any shell command - *preconfigured, installed* - with a simple line. Sass comes with a [command-line interface](https://sass-lang.com/documentation/cli/dart-sass) (CLI), which we can configure widely; this is the one we will run through npm scripts.
 
