--- a/src/blog/why-use-sass.mdx
+++ b/src/blog/why-use-sass.mdx
@@ -7,7 +7,7 @@ published: true
 tags: ['sass']
 ---
 
-<p class="lead">Sass is the most popular CSS preprocessor. It is a great tool to manage your stylesheets differently and (maybe) better.</p>
+<p className="lead">Sass is the most popular CSS preprocessor. It is a great tool to manage your stylesheets differently and (maybe) better.</p>
 
 Sass is a simplified programming language; you can use conditions, loops, etc. Its best features aren’t the variables or the nesting (although these were the primary selling points) but that you can program it, write mixins and functions, and use its core functionalities like color manipulation.
 
