--- a/src/docs/customization/settings.mdx
+++ b/src/docs/customization/settings.mdx
@@ -4,7 +4,7 @@ order: 11
 github: 'https://github.com/conedevelopment/sprucecss-site/blob/main/src/docs/customization/settings.mdx'
 ---
 
-<p class="lead">In Spruce CSS, the settings are global options controlled through a Sass map.</p>
+<p className="lead">In Spruce CSS, the settings are global options controlled through a Sass map.</p>
 
 You can access any setting with the [setting() helper function](/docs/sass/functions#setting). Below, you can see the `$settings` object with its default values.
 
