--- a/src/docs/elements/forms.mdx
+++ b/src/docs/elements/forms.mdx
@@ -4,7 +4,7 @@ order: 20
 github: 'https://github.com/conedevelopment/sprucecss-site/blob/main/src/docs/elements/forms.mdx'
 ---
 
-<p class="lead">Spruce CSS comes with overall form support for styling the different native elements. Also, it has some form layout helpers.</p>
+<p className="lead">Spruce CSS comes with overall form support for styling the different native elements. Also, it has some form layout helpers.</p>
 
 We differentiate the following groups for styling:
 - the `form-control` class is used for input (not radio, checkbox, range, or file), textarea, select elements,
