--- a/src/docs/elements/generators.mdx
+++ b/src/docs/elements/generators.mdx
@@ -4,7 +4,7 @@ order: 16
 github: 'https://github.com/conedevelopment/sprucecss-site/blob/main/src/docs/elements/generators.mdx'
 ---
 
-<p class="lead">The generators are special (a naming convention in Spruce CSS only) mixins, which we use to generate base styles.</p>
+<p className="lead">The generators are special (a naming convention in Spruce CSS only) mixins, which we use to generate base styles.</p>
 
 By default Spruce CSS doesn’t generate styles; importing it, you access the variables, mixins, and functions but nothing more. If you wish to use the styling, you have to include them explicitly.
 
