--- a/src/docs/elements/typography.mdx
+++ b/src/docs/elements/typography.mdx
@@ -4,7 +4,7 @@ order: 17
 github: 'https://github.com/conedevelopment/sprucecss-site/blob/main/src/docs/elements/typography.mdx'
 ---
 
-<p class="lead">Typography is an essential part of any system. With Spruce, you get basic styles for the most related HTML elements.</p>
+<p className="lead">Typography is an essential part of any system. With Spruce, you get basic styles for the most related HTML elements.</p>
 
 - The type scale is REM (root-relative EM) based. The base size is set to 1rem by default through `$font-size-base`, which will usually be 16px (depending on the browser's defaults). You can also change the ratio with the `$font-size-ratio` variable.
 - You can use four diferent font sizing variables: `$font-size-base` (1rem), `$font-size-sm` (0.9rem), `$font-size-lg` (1.1rem) and `$font-size-lead` (math.pow($font-size-ratio, 1) * $font-size-base).
