--- a/src/docs/getting-started/accessibility.mdx
+++ b/src/docs/getting-started/accessibility.mdx
@@ -4,7 +4,7 @@ order: 5
 github: 'https://github.com/conedevelopment/sprucecss-site/blob/main/src/docs/getting-started/accessibility.mdx'
 ---
 
-<p class="lead">Inclusivity and accessibility (A11Y) are some of the main concerns of Spruce CSS. Our goal is to help you develop more accessible web-based projects through our code and documentation, where we will try to show you small, related tips and guidance where necessary.</p>
+<p className="lead">Inclusivity and accessibility (A11Y) are some of the main concerns of Spruce CSS. Our goal is to help you develop more accessible web-based projects through our code and documentation, where we will try to show you small, related tips and guidance where necessary.</p>
 
 Building something more inclusive is a long process. We learn on the way, too, so this always will be a work in progress.
 
