--- a/src/docs/getting-started/appendix.mdx
+++ b/src/docs/getting-started/appendix.mdx
@@ -4,7 +4,7 @@ order: 10
 github: 'https://github.com/conedevelopment/sprucecss-site/blob/main/src/docs/getting-started/appendix.mdx'
 ---
 
-<p class="lead">In the appendix, you can find some references that inspired or gave any input related to any aspects of Spruce CSS or our learning in general.</p>
+<p className="lead">In the appendix, you can find some references that inspired or gave any input related to any aspects of Spruce CSS or our learning in general.</p>
 
 Creating a framework is a complex task; you need a lot of input. You usually don't invent the wheel; you use the old ideas in a new form. You try to sum up your knowledge in an acceptable format.
 
