--- a/src/docs/getting-started/js.mdx
+++ b/src/docs/getting-started/js.mdx
@@ -4,7 +4,7 @@ order: 8
 github: 'https://github.com/conedevelopment/sprucecss-site/blob/main/src/docs/getting-started/js.mdx'
 ---
 
-<p class="lead">Spruce comes with a few JS utilities needed for the UI components or in generic development.</p>
+<p className="lead">Spruce comes with a few JS utilities needed for the UI components or in generic development.</p>
 
 The scripts utilize [JS modules](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide/Modules), so you have to use import to use them.
 
