--- a/src/docs/getting-started/print.mdx
+++ b/src/docs/getting-started/print.mdx
@@ -4,7 +4,7 @@ order: 7
 github: 'https://github.com/conedevelopment/sprucecss-site/blob/main/src/docs/getting-started/print.mdx'
 ---
 
-<p class="lead">Spruce has some print-related styles. Nothing severe or fancy, but a set of minimal styles.</p>
+<p className="lead">Spruce has some print-related styles. Nothing severe or fancy, but a set of minimal styles.</p>
 
 You can turn on basic print styles from the `$settings` map; set the `print` to `true` to turn it on.
 
