--- a/src/docs/sass/variables.mdx
+++ b/src/docs/sass/variables.mdx
@@ -4,7 +4,7 @@ order: 13
 github: 'https://github.com/conedevelopment/sprucecss-site/blob/main/src/docs/sass/variables.mdx'
 ---
 
-<p class="lead">Spruce CSS comes with a bunch of Sass variables. It also uses CSS custom properties for colors and transitions.</p>
+<p className="lead">Spruce CSS comes with a bunch of Sass variables. It also uses CSS custom properties for colors and transitions.</p>
 
 Our central concept is not to expose a CSS custom property that isn’t needed for later customization, like the colors (for `prefers-color-scheme` or any later overwrite) or the transitions (for `prefers-reduced-motion`). Also, this is a framework for better customization Sass variables are needed (even if we generate CSS custom properties based on them). Like most things, this can change in the future depending on the use cases.
 
