--- a/src/docs/customization/settings.mdx
+++ b/src/docs/customization/settings.mdx
@@ -93,9 +93,7 @@ Modify the optimal font-size value:
   )
 );
 ```
-<Notification type="info">
-We added a simple formula: one value with a relative viewport unit (vw) to make it responsive and one value with a root-relative unit (to set up a minimum value, it never will be smaller than 1rem). You can specify any numerical value, but use quotations if you use an operation.
-</Notification>
+<Notification type="info">We added a simple formula: one value with a relative viewport unit (vw) to make it responsive and one value with a root-relative unit (to set up a minimum value, it never will be smaller than 1rem). You can specify any numerical value, but use quotations if you use an operation.</Notification>
 
 ### References
 - [font-size()](/docs/sass/functions/#font-size)
