--- a/src/docs/getting-started/installation.mdx
+++ b/src/docs/getting-started/installation.mdx
@@ -51,7 +51,7 @@ The `@use` rule loads the mixins, functions, and variables in a namespaced way. 
 }
 ```
 
-We include the <a href="/docs/sass/mixins/#layout-stack" class="code-link">`layout-stack`</a> mixin in this example and use the <a href="/docs/sass/functions#spacer" class="code-link">`spacer`</a> function to get the “m” sized spacer.
+We include the <a href="/docs/sass/mixins/#layout-stack" className="code-link">`layout-stack`</a> mixin in this example and use the <a href="/docs/sass/functions#spacer" className="code-link">`spacer`</a> function to get the “m” sized spacer.
 
 If you don’t want to use namespacing, you have to import like the following:
 
