--- a/src/docs/sass/variables.mdx
+++ b/src/docs/sass/variables.mdx
@@ -48,9 +48,7 @@ There are two types of variables: single one and map. All of them are overwritea
   $container-width: 86rem
 );
 ```
-<Notification type="info">
-You must do the overwrite (of any of the variables or maps) at the first use of <code>@use</code> in your code — <a href="https://sass-lang.com/documentation/at-rules/use">more information about the newer imports in Sass</a>.
-</Notification>
+<Notification type="info">You must do the overwrite (of any of the variables or maps) at the first use of <code>@use</code> in your code — <a href="https://sass-lang.com/documentation/at-rules/use">more information about the newer imports in Sass</a>.</Notification>
 
 ## Colors
 
@@ -145,9 +143,7 @@ $colors: (
 );
 ```
 
-<Notification type="info">
-We declare the colors with the modern HSL syntax. The generated values are given and converted by Sass by default.
-</Notification>
+<Notification type="info">We declare the colors with the modern HSL syntax. The generated values are given and converted by Sass by default.</Notification>
 
 ### Get Color Values
 
